2011-05-17  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (html-report-details): Add missing filtering params to
	"All filtered results" download.  Add missing max_results param to
	"Filtered Results 1 to n" download.

2011-05-17  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad.c (serve_post): Correct esc_first_result case.  Add missing
	esc_max_results case.

2011-05-17  Matthew Mundell <matthew.mundell@greenbone.net>

	Split the escalate case of get_report out into a POST request.

	* src/gsad.c (init_validator): Add alias "escalate_report".
	(struct req_parms, free_resources, serve_post): Add required fields.
	(exec_omp_post): Add new command.

	* src/html/omp.xsl (html-report-details): Make escalate icons POST forms
	that request the new escalate_report command.

2011-05-17  Matthew Mundell <matthew.mundell@greenbone.net>

	Switch test_escalator and the save_* commands to POST.

	* src/gsad.c (init_validator): Add alias "new_threat".
	(struct req_parms, free_resources, serve_post): Add required fields.
	(exec_omp_post): Add commands.
	(exec_omp_get): Remove commands.

	* src/html/omp.xsl (start-icon): Add cmd and alt params.
	(html-edit-task-form, html-edit-note-form, html-edit-override-form): Make
	form POST.  Add caller.
	(escalator): Use start-icon.

2011-05-16  Matthew Mundell <matthew.mundell@greenbone.net>

	Switch the task control commands to POST.

	* src/gsad.c (exec_omp_post): Add task control commands.
	(exec_omp_get): Remove task control commands.

	* src/html/omp.xsl: Replace every task control icon link with a POST icon.
	(pause-icon, resume-icon, start-icon, stop-icon): New templates.

2011-05-16  Matthew Mundell <matthew.mundell@greenbone.net>

	Switch the restore command to POST.

	* src/gsad.c (init_validateor): Replace . with - in uuid.
	(exec_omp_post): Add restore command.
	(exec_omp_get): Remove restore command.

	* src/html/omp.xsl: Replace every restore icon link with a POST icon.