@@ -7785,10 +7785,7 @@ delete_note_omp (credentials_t * credentials, const char *note_id,
   int socket;
   gchar *html;
 
-  if ((note_id == NULL) || (next == NULL) || (report_id == NULL)
-      || (sort_field == NULL) || (sort_order == NULL) || (levels == NULL)
-      || (notes == NULL) || (overrides == NULL) || (result_hosts_only == NULL)
-      || (search_phrase == NULL) || (min_cvss_base == NULL))
+  if (next == NULL)
     return gsad_message (credentials,
                          "Internal error", __FUNCTION__, __LINE__,
                          "An internal error occurred while deleting a note. "
@@ -8996,14 +8993,11 @@ delete_override_omp (credentials_t * credentials, const char *override_id,
   int socket;
   gchar *html;
 
-  if ((override_id == NULL) || (next == NULL) || (report_id == NULL)
-      || (sort_field == NULL) || (sort_order == NULL) || (levels == NULL)
-      || (notes == NULL) || (overrides == NULL) || (result_hosts_only == NULL)
-      || (search_phrase == NULL) || (min_cvss_base == NULL))
+  if (next == NULL)
     return gsad_message (credentials,
                          "Internal error", __FUNCTION__, __LINE__,
-                         "An internal error occurred while deleting a note. "
-                         "The note remains intact. "
+                         "An internal error occurred while deleting an override. "
+                         "The override remains intact. "
                          "Diagnostics: Required parameter was NULL.",
                          "/omp?cmd=get_overrides");
 
