@@ -1,5 +1,10 @@
 2011-05-17  Matthew Mundell <matthew.mundell@greenbone.net>
 
+	* src/gsad_omp.c (delete_note_omp, delete_override_omp): Revert erroneous
+	NULL checks added when switching the delete_* commands to POST.
+
+2011-05-17  Matthew Mundell <matthew.mundell@greenbone.net>
+
 	* src/html/omp.xsl (html-report-details): Add missing filtering params to
 	"All filtered results" download.  Add missing max_results param to
 	"Filtered Results 1 to n" download.
